fix: #125 fix circle button content alignment

--- a/src/less/components/buttons.less
+++ b/src/less/components/buttons.less
@@ -573,6 +573,10 @@ a[pam-Button~="circle"] {
     vertical-align: middle;
     width: @button-circle-size;
 
+    & > * {
+        margin: auto;
+    }
+
     .hook-button-circle;
 }
 
